--- a/.github/workflows/fetch_weather.yml
+++ b/.github/workflows/fetch_weather.yml
@@ -1,4 +1,4 @@
-name: Weather Fetch Workflow
+name: Fetch weather details
 
 on:
   schedule:
@@ -24,8 +24,9 @@ jobs:
           pip install -r requirements.txt
 
       - name: Set environment variables
-        run: |
-          echo "WEATHER_API_KEY=${{ secrets.WEATHER_API_KEY }}" >> $GITHUB_ENV
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          WEATHER_API_KEY: ${{ secrets.WEATHER_API_KEY }}
 
       - name: Fetch weather
         run: python -m ingestion.fetch_weather
